# obliviarch

./: .gitignore  README.md  pyproject.toml
obliviarch/: __init__.py  cli.py  engine.py
obliviarch/archetypal/: __init__.py  archetype_vault.py
obliviarch/episodic/: __init__.py  trace_capture.py
obliviarch/lethe/: __init__.py  consolidation.py
obliviarch/semantic/: __init__.py  schema_extractor.py
tests/: test_obliviarch.py
