[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obliviarch"
version = "0.1.0"
description = "OBLIVIARCH — The Architecture of Controlled Oblivion. Trace Schema Compression for swarms: episodic → schema → archetype, 500x reduction."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "0x-wzw"}]
keywords = ["memory-compression", "swarm", "multi-agent", "trace-schema", "archetype", "oblivion", "stigmergy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
obliviarch = "obliviarch.cli:main"

[tool.setuptools.packages.find]
include = ["obliviarch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]